theme/login/resources/css/custom.css
@import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,80,700);

.login-pf body {
    margin: 0;
    font-family: 'Open Sans', sans-serif;
    background-size: auto;
    font-size: 16px;
  
}

#kc-page-title {
  text-shadow: 1px 1px 3px #0000004a;
}

.card-pf {
    background: #fff;
    border: 1px solid #fff;
    position: relative;
    text-align: left;
    max-width: 600px;
    border-radius: 5px;
    margin: 0 auto;
    margin-bottom: 0px;
    box-shadow: 2px 2px 4px 4px #0000004a;
}

.pf-c-form__label.pf-c-form__label-text {
  display: none;
}

#input-error {
  font-size: smaller;
  color: red;
}

#username {
  width: 100%;
  height: 42px;
  box-sizing: border-box;
  border-radius: 5px;
  border: 1px solid #ccc;
  font-size: 14px;
  font-family: 'Montserrat','Roboto', sans-serif;
  padding: 0 20px 0 50px;
  outline: none;
  background: #fff url('../images/login.png') 20px top no-repeat;
  background-size: 16px 80px;
}
#password {
  width: 100%;
  height: 42px;
  box-sizing: border-box;
  border-radius: 5px 0px 0px 5px;
  border: 1px solid #ccc;
  margin-top: 20px;
  font-size: 14px;
  font-family: 'Montserrat','Roboto', sans-serif;
  padding: 0 20px 0 50px;
  outline: none;
  background: #fff url('../images/pw.png') 20px top no-repeat;
  background-size: 16px 80px;
}
.pf-c-button.pf-m-control {
  margin-top: 20px;
}

#username:focus {
  border: 1px solid #f7941d;
  background: #fff url('../images/login.png') 20px bottom no-repeat;
  background-size: 16px 80px;
}
#password:focus {
  border: 1px solid #f7941d;
  background: #fff url('../images/pw.png') 20px bottom no-repeat;
  background-size: 16px 80px;
}
.logo {
  width: 600px;
  background-position-x: 0%;
  background-position-y: 0%;
  background-size: auto;
  background-position: center;
  margin: 30px auto;
  margin-bottom: 0px;
  margin-top: 0px; 
}

#username {
  font-family: 'Montserrat','Roboto', sans-serif;
}

#kc-header {
  margin-bottom: 0px;
}

#kc-header-wrapper {
  color: #ffffffa6;
  margin-bottom: 20px;
}

.socialbutton {
    width: 100%;
    border: none;
    margin-right: 20px;
    margin-left: 20px;
    background: red;
    padding: 15px 22px 15px 22px;
    font-size: 14px;
    background-color: rgba(255,255,255,0.27);
    border-radius: 5px;
    font-family: 'Montserrat', 'Roboto', sans-serif;
    cursor: pointer;
    color: #eaf0fb;
    text-align: center;
  }

  .pf-c-button.pf-m-primary {
    color:var(--pf-c-button--m-primary--Color);
    background-color:#242578;
    border-radius: 5px;
    font-family: 'Montserrat', 'Roboto', sans-serif;
    text-transform: uppercase;
    font-weight: bold;
  }

  .pf-c-button.pf-m-block {
    display:block;
    width:100%;
    height: 40px;
  }
  
h2 {
    text-align: center;
    padding-bottom: 15px;
}

